# yr-cli

./: .gitignore  .pre-commit-config.yaml  README.md  cache.py  pyproject.toml  requirements.txt  setup.cfg  yr_cli.py
.github/: test.yml
.github/workflows/: publish.yml  test_publish.yml
yr_cli/: __init__.py  api.py  cli.py  commands.py  interface.py  maps.py  utils.py
yr_cli/locationforecast/: data.py  type.py
