# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yr-cli"
version = "0.0.1"
description = "A rich CLI for location-based weather forecasts"
readme = "README.md"
authors = [{ name = "Tim Wolff-Piggott", email = "twolffpiggott@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
keywords = ["yr", "weather", "cli", "command line"]
dependencies = [
    "inquirer>=3.4.0",
    "requests>=2.32.3",
    "requests-cache==1.2.1",
    "rich>=13.8.0",
    "py-staticmaps==0.4.0",
    "typer>=0.12.5",
    "urllib3>=2.2.2",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest>=8.3.3"]
dev = [
    "pytest>=8.3.3",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "ipdb",
    "isort>=5.13.2",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/twolffpiggott/yr-cli"

[project.scripts]
yr = "yr_cli.cli:app"

[tool.setuptools]
packages = ["yr_cli"]

[tool.setuptools.package-data]
"yr_cli.icons" = ["*.png"]

[tool.isort]
profile = "black"
multi_line_output = 3
